Bug 215493 - rectangular selection are not undone on undo
Summary: rectangular selection are not undone on undo
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-20 23:07 UTC by Dmitry Kazakov
Modified: 2009-12-03 03:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Kazakov 2009-11-20 23:07:07 UTC
Version:            (using KDE 4.3.0)
Installed from:    Compiled From Sources

1) Draw a selection (e.g. rectangular)
2) Draw another one nearby. The first one will be hidden.
3) Click "Undo" once - nothing happens
4) Click undo one more time - selection disappears.

PS:
redo works fine
Comment 1 Dmitry Kazakov 2009-12-01 22:15:10 UTC
SVN commit 1057274 by dkazakov:

Fixed selections undo bug.


Memento items should have been reverted in a reversed order.

BUG:215493


 M  +6 -1      kis_memento_manager.cc  
 M  +2 -0      kis_tiled_data_manager.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1057274
Comment 2 Sven Langkamp 2009-12-03 03:45:22 UTC
SVN commit 1057655 by langkamp:

better fix for painting ellipses
CCBUG:215493


 M  +2 -2      image/kis_painter.cc  
 M  +2 -3      plugins/tools/selectiontools/kis_tool_select_elliptical.cc  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1057655