Fixed selections undo bug.

Memento items should have been reverted in a reversed order.

BUG:215493

svn path=/trunk/koffice/; revision=1057274